# ff_ac

./: .gitignore  .gitmodules  .queue_launcher_state.json  CALIBRATION_GUIDE.md  CALIBRATION_SETUP_INVESTIGATION.md  HANDOFF_color_calibration.md  PROJECT_OVERVIEW.md  README.md  prep_color_seg6.ps1  prepare_and_calibrate.ps1  pyproject.toml  queue_launcher.py  resetup_depth.ps1  resetup_seg6.ps1  resetup_seg6_verified.ps1  run_autocalibration.ps1  setup_ac60.ps1  setup_all.ps1
config/: bounds_rollout.json  bounds_seg6.json  bounds_seg6_coupled.json  bounds_seg6_flashfree.json  bounds_seg6_flashwide.json  bounds_seg6_s4.json  bounds_seg6_s4_aqhi.json  bounds_seg6_titration.json  bounds_seg6_titration_relaxed.json  bounds_seg8.json  bounds_seg8_s4.json  common.toml  common_depthtest.toml  common_seg6.toml  common_test.toml  flashtest_decoupled.json  flashtest_ffum.json  wasserstein_ac.toml
config_seg6/: coloron.toml
config_seg8/: common.toml
data/: depth_measurements.csv  facies.csv
scripts/: README_workflows.md  _workflow_common.py  ac53_calibration_testbed.py  ac_production_campaign.py  analysis.py  apply_calibration_groups.py  auto_calibrate_color_to_mass.py  auto_calibrate_color_to_mass_ffum_port.py.bak  calibration.py  calibration_objective.py  calibration_worker.py  check_colorchecker.py  comparison.py  detect_camera_shifts.py  diag_ac53_ratios.py  distributed_analysis_queue.py  distributed_auto_calibration_queue.py  distributed_auto_calibration_queue_v1_backup.py  distributed_wasserstein_queue.py  fix_calib_csv_times.py  generate_configs.py  queue_core.py  (+13 more)
(+229 files in other folders)
